--- a/P02-VehiclesAPI/vehicles-api/pom.xml
+++ b/P02-VehiclesAPI/vehicles-api/pom.xml
@@ -101,6 +101,10 @@
             <version>2.9.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
 
     </dependencies>
 
